--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
-S48aXy4bA9e3FyYJ
+
+MONGODB_URI=mongodb+srv://msyedjubair_db_user:S48aXy4bA9e3FyYJ@nextalk.gd4lc7j.mongodb.net/?appName=NexTalk
+PORT=5000
