--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,4 @@
-
 MONGODB_URI=mongodb+srv://msyedjubair_db_user:S48aXy4bA9e3FyYJ@nextalk.gd4lc7j.mongodb.net/?appName=NexTalk
 PORT=5000
+JWT_SECRET=92565e6d69f161230aaf99d2a35afcfb
+ENVIROMENT=delopment
