--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,10 @@
 MONGODB_URI=mongodb+srv://msyedjubair_db_user:S48aXy4bA9e3FyYJ@nextalk.gd4lc7j.mongodb.net/?appName=NexTalk
-PORT=5000
 JWT_SECRET=92565e6d69f161230aaf99d2a35afcfb
+
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@do7y69xqo
+CLOUDINARY_NAME=do7y69xqo
+CLOUDINARY_API_KEY=184369733668787
+CLOUDINARY_API_SECRET=t2fMuMiTN7TdzJtr-Zvm8HkyjaU
+
+PORT=5000
 ENVIROMENT=delopment
