--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.6.4",
     "react-router": "^7.13.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0",
