--- a/Server/.env
+++ b/Server/.env
@@ -7,4 +7,5 @@ CLOUDINARY_API_KEY=184369733668787
 CLOUDINARY_API_SECRET=t2fMuMiTN7TdzJtr-Zvm8HkyjaU
 
 PORT=5000
+CLIENT_URL="http://localhost:5173"
 ENVIROMENT=delopment
