--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,9 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --exec npx tsx src/index.ts"
+    "dev": "nodemon --exec npx tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
