--- a/Server/package.json
+++ b/Server/package.json
@@ -8,7 +8,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --exec npx tsx src/index.ts",
-    "build": "tsc",
+    "build": "npx tsc",
     "start": "node dist/index.js"
   },
   "devDependencies": {
